infra/k8s/auth-postgres-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-postgres-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-postgres
  template:
    metadata:
      labels:
        app: auth-postgres
    spec:
      containers:
        - name: auth-postgres
          image: postgres:14
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: auth-postgres-data
            - mountPath: /docker-entrypoint-initdb.d
              name: auth-postgres-initdb
              readOnly: true
      volumes:
        - name: auth-postgres-data
          persistentVolumeClaim:
            claimName: auth-postgres-volume-claim
        - name: auth-postgres-initdb
          configMap:
            name: auth-postgres-initdb
---
apiVersion: v1
kind: Service
metadata:
  name: auth-postgres-srv
spec:
  selector:
    app: auth-postgres
  ports:
    - name: auth-postgres
      protocol: TCP
      port: 5432
      targetPort: 5432
